# Slae

./: .gitignore  CMakeLists.txt
Charts/Cxx/: contour.cxx  main.cxx  qr.cxx  simple_iteration.cxx
Charts/Py-Files/: contour.py  qr.py  sim.py  speed.py
Source/: Qr.cxx  Sim.cxx  Slae.cxx  Slae.hxx  Tridiagonal.cxx
Test/: chebyshov.cxx  operations.cxx  qr.cxx  sim.cxx  ssor.cxx  sweep_method.cxx
